--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == S3 Uploader Asp.Net MVC Example
 
-MVC port of Nico Ritsche's multiple file S3 uploader Rails example, which can be found at https://github.com/ncri/s3_uploader_example
+MVC port of Nico Ritsche's (https://github.com/ncri) multiple file S3 uploader Rails example, which can be found at https://github.com/ncri/s3_uploader_example
 
 And based on the great jQuery File Upload plugin: http://blueimp.github.com/jQuery-File-Upload/
 
@@ -15,23 +15,21 @@ And based on the great jQuery File Upload plugin: http://blueimp.github.com/jQue
 1. Build S3Uploader\S3Uploader.sln (make sure nuget package restore pulls all the dependencies down that you need)
 
 2. Fill in the AWS S3 config variables within S3Uploader\S3PrepTask\App.config and S3Uploader\S3Uploader\Web.config:
-	<add key="AWSAccessKey" value="" />
-	<add key="AWSSecretKey" value="" />
-	<add key="AWSBucket" value="" />
-	<add key="AWSUploaderPath" value="uploader/"/>
+    AWSAccessKey
+    AWSSecretKey
+    AWSBucket
+    AWSUploaderPath
 
-4. Set your server host in S3Uploader/S3Uploader/Scripts/s3_uploader/s3_uploader.js:
+3. Set your server host in S3Uploader/S3Uploader/Scripts/s3_uploader/s3_uploader.js:
     var host = 'http://yourdomain.com';
 
-5. Deploy uploader javascript and form to s3 (run in command prompty)
+4. Deploy uploader javascript and form to s3 (run in command prompty)
     S3Uploader\S3PrepTask\bin\{debug or release}\S3PrepTask.exe
 
-6. Run or deploy the web app :)
+5. Upload all the files!!! :)
 
 
 == Notes
-
-* The uploader location on s3 is currently hardcoded to /uploader.
 
 * The path for the uploaded files defaults to "uploads/:uuid" (see UploadsController). Currently the path must have the :uuid placeholder in it.
   It is replaced with a random string for each uploaded file, to obfuscate the file locations and to prevent overwriting existing files.
