--- a/README.rdoc
+++ b/README.rdoc
@@ -24,7 +24,7 @@ And based on the great jQuery File Upload plugin: http://blueimp.github.com/jQue
     var host = 'http://yourdomain.com';
 
 4. Deploy uploader javascript and form to s3 (run in command prompty)
-    Open command prompty and run S3Uploader\S3PrepTask\bin\{debug or release}\S3PrepTask.exe
+    Open command prompt and run S3Uploader\S3PrepTask\bin\{debug or release}\S3PrepTask.exe
 
 5. Upload all the files!!! :)
 
