--- a/README.rdoc
+++ b/README.rdoc
@@ -4,8 +4,7 @@ MVC port of Nico Ritsche's (https://github.com/ncri) multiple file S3 uploader R
 
 And based on the great jQuery File Upload plugin: http://blueimp.github.com/jQuery-File-Upload/
 
-
-* Upload multiple files straight to S3 without hitting the server first
+* Upload multiple files straight to S3 from within the browser without hitting the server first
 * Gets around S3's lacking cross domain access header support by storing the upload form on s3, embedded in an iframe.
 * Upload progress is displayed on the host server by utilizing postMessage browser communication.
 * After a file is uploaded a post ajax request is made to create a resource for the uploaded file in the db.
